app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require font-awesome
 *= require jquery.ui.slider
 *= require_self
 *= require_tree .
 */

$navbar-height: 40px;
$navbar-default-bg: #F0F0F0;
$navbar-default-link-hover-bg: #ddd;

@import "bootstrap";

$footer-height: 40px;

html {
  height: 100%;
  width: 100%;
}

body {
  //background-image: url('male_reference_5_by_bugidifino-d3herls.jpg');
//  background-size: 100%;
//  background-position: 0px 0px;
//  background-repeat: no-repeat;
  
  margin-top: $footer-height; //pushes footer down
  font-family: "Lato", sans-serif !important;
  background-color: #F9F9FB !important;
  font-weight: 100;
  position: relative;
  min-height: 100%;
//  margin-bottom: -$footer-height;
}

center.root-center {
  height: 100%;
  width: 100%;
//  opacity: 0;
//  position: absolute;
//  margin-top: $footer-height;
}

div.container-fluid#root {
  //background-image: url('male_reference_5_by_bugidifino-d3herls-sm.jpg');
//  background-size: 100%;
//  background-position: 0px 0px;
//  background-repeat: no-repeat;
//  overflow: hidden;
  height: 100%;
}

div.container-fluid#root {
  .jumbotron {
    background-color: rgba(255, 255, 255, 0.8);
    max-width: 55%;
    margin-top: 5%;

    opacity:0;
//    -webkit-transition:opacity .6s;
//    -moz-transition:opacity .6s;
//    -o-transition:opacity .6s;
//    transition: opacity .6s;
  }
}

div.moving-bg {
  background: url('male_reference_5_by_bugidifino-d3herls-sm.jpg');
}

body:after {
  content: "";
  display: block;
}

#root-content > div:not(#root) {
  background-color: #F9F9FB;
  padding-top: $footer-height;
  margin-bottom: $footer-height+10px;
}

.devise-container {
  background-color: #F9F9FB;
  padding-top: $footer-height;
  margin-bottom: 2*$footer-height;
}

div.container#root-content {
  width: 100%;
  height: 100%;
  padding: 0;
//  margin-bottom: $footer-height+10px; commented out = footer sticks to bottom and doesn't overlap
}

footer { //check the margin! margin > 0 would push footer down below page limits
  padding: 10px;
  background-color: rgba(249, 249, 251, 0.4);
  border-color: #ddd;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: $footer-height;
}

.content-pages {
//  margin-top: $footer-height;
}

.dropdown-header {
  font-size: 16px;
  text-transform: uppercase;
  font-weight: 300;
}

.alert {
  text-align: center;
}

center.root-alerts {
//  margin-top: $footer-height; //breaks footer, extend under height. commented out = fix footer, but alert covered by navbar
}

.errors {
  text-align: center;
  width: 70%;
}

.subscription-warning {
 width: 70%;
 text-align: center;
}

.btn-color {
  background-image: none;
}

.jumbotron {
  width: 65%;
  margin-top: 20px;
  opacity: 0;
    
  h1 {
    font-size: 54px;
    font-weight: 300;
    text-transform: uppercase;
  }
}

#error_explanation {
  padding: $alert-padding;
  padding-top: 5px;
  margin-bottom: $line-height-computed;
  border: 1px solid transparent;
  border-radius: $alert-border-radius;

  h2 {
    font-size: 18px;
  }
  
  h4 {
    margin-top: 0;
    color: inherit;
  }

  .alert-link {
    font-weight: $alert-link-font-weight;
  }

  > p,
  > ul {
    margin-bottom: 0;
  }
  > p + p {
    margin-top: 5px;
  }
  
  @include alert-variant($alert-danger-bg, $alert-danger-border, $alert-danger-text);
}

